syntax = "proto3";

package com.sitewhere.grpc.model;

option java_outer_classname = "TenantModel";

import "sitewhere-common.proto";

// ###############
// ### TENANTS ###
// ###############

// Information for creating a tenant.
message GTenantCreateRequest {
	string id = 1;
	string name = 2;
	string authenticationToken = 3;
	string logoUrl = 4;
	string tenantTemplateId = 5;
	repeated string authorizedUserIds = 6;
	map<string, string> metadata = 7;
}

// Criteria for tenant search.
message GTenantSearchCriteria {
	GSearchText searchText = 1;
	GUserReference authorizedUser = 2;
	GPaging paging = 3;
}

// Results for tenant search.
message GTenantSearchResults {
	int64 count = 1;
	repeated GTenant tenants = 2;
}

// Information for a tenant.
message GTenant {
	string id = 1;
	string name = 2;
	string authenticationToken = 3;
	string logoUrl = 4;
	string tenantTemplateId = 5;
	repeated string authorizedUserIds = 6;
	map<string, string> metadata = 7;
	GEntityInformation entityInformation = 8;
}